--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>strategy-escape-flow</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Missão Estratégica</title>
+    <meta name="description" content="Sistema de priorização estratégica para empresas" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="strategy-escape-flow" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Missão Estratégica" />
+    <meta property="og:description" content="Sistema de priorização estratégica para empresas" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://missao-estrategica.com" />
+    <meta property="og:image" content="/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Missão Estratégica" />
+    <meta name="twitter:description" content="Sistema de priorização estratégica para empresas" />
+    <meta name="twitter:image" content="/og-image.jpg" />
   </head>
 
   <body>
